调整jre版本,调整startup.sh脚本中warn